Fixed trailer going out of viewport on some screens

--- a/src/components/MediaDetails/Trailer.module.scss
+++ b/src/components/MediaDetails/Trailer.module.scss
@@ -17,6 +17,8 @@
   transform: translate(-50%, -50%);
   width: clamp(1px, 1760px, 90vw);
   height: clamp(1px, 990px, calc(90vw * 0.5625));
+  max-height: 92vh;
+  max-width: calc(1.7778 * 92vh);
   background-color: black;
   border: 5px solid #ccc;
   box-shadow: 0 0 10px 10px black;
